k8s/giropops-senhas-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: giropops-senhas
  name: giropops-senhas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: giropops-senhas
  template:
    metadata:
      labels:
        app: giropops-senhas
    spec:
      containers:
        - name: giropops-senhas
          image: jvlr9510/linuxtips-giropops-senhas:chainguardv1.0
          ports:
            - containerPort: 5000
          imagePullPolicy: Always
